--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="http://localhost:5173/main.jsx"></script>
-    <!-- <script type="module" src="/src/main.tsx"></script> -->
+    <!-- <script type="module" src="http://localhost:5173/main.jsx"></script> -->
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
